fixed header white space issues

--- a/memories/styles/base.css
+++ b/memories/styles/base.css
@@ -8,6 +8,12 @@
     --font-color: rgb(255, 242, 227);
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
 body {
     font-family: var(--font-family);
     background-color: var(--background-accent);
